# Cylinder-pose-estimation-with-stereo-camera

./: README.md  operator.py
cpp/: CMakeLists.txt  ImageEventHandler.cpp  ImageHandler.h  PhaseCompute.cu  capturer.cpp  capturer.h  capturer_setting.txt  matcher.cpp  matcher.h  sbaslercameracontrol.cpp  sbaslercameracontrol.h
cpp/cmake/: FindPylon.cmake
imaging/: scanner.py
localization/: cyliner_segmentation.py  localize.py  operation.py  test.py  utils.py
